Initial Markup and SCSS

--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
     <title>Project Coming Soon</title>
     <link rel="stylesheet" href="./public/css/main.min.css">
 </head>
-<body>
-    <div class="container">
+<body>   
+    
         <header>
             <h1>
                 <div class="line1"> We're </div>
                 <div class="line2"> Coming </div>                
-            </h1>
+            </h1>       
         </header>
         <footer>
+            <div class="inner">
 
-        </footer>
-    </div>    
+            </div>
+        </footer>        
+            
 </body>
 </html>
