Create assets folder and a form for subscription

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
             <h1>
                 <div class="line1"> We're </div>
                 <div class="line2"> Coming </div>                
-            </h1>       
+            </h1>
+            <form class="header-submit" action="#">
+                <input type="email" size="40" placeholder="Enter your e-mail adress here ..." >
+            </form> 
         </header>
         <footer>
-            <div class="inner">
-
-            </div>
+            
         </footer>        
             
 </body>
