Add an input button

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
                 <div class="line1"> We're </div>
                 <div class="line2"> Coming </div>                
             </h1>
-            <form class="header-submit" action="#">
+            <form class="subscription" action="#">
                 <input type="email" size="40" placeholder="Enter your e-mail adress here ..." >
+                <input type="submit" value="Get Notified">
             </form> 
         </header>
         <footer>
