--- a/index.html
+++ b/index.html
@@ -61,6 +61,33 @@
                     <div class="time-label">Seconds</div>
                 </div>
             </div>
+            <!--End Of Counter-->
+
+            <div class="config-container">                
+                <div class="button">
+
+                    <svg
+                            width="24"
+                            height="24"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <path
+                                d="M18 15L12 9L6 15"
+                                stroke="#3B3B3B"
+                                stroke-width="2"
+                                stroke-linecap="round"
+                                stroke-linejoin="round"
+                            />
+                        </svg>
+
+                    <div class="border-bg">
+                        
+                    </div>
+                </div>
+            </div>
+
             <div class="social-icons">
                 <ul>
                     <li>
@@ -134,6 +161,11 @@
                         </svg>
                     </li>
                 </ul>
+            </div>
+            <!--End Of Social Icons-->
+
+            <div class="attribution">
+                Created And Coded By Fernando Tezza
             </div>
         </footer>
     </body>
