Begin applying responsive styles to match the desktop layout

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
             <!--End Of Counter-->
 
-            <div class="config-container">                
+            <div class="button-container">                
                 <div class="button">
 
                     <svg
