--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <input
                         type="email"
                         size="40"
-                        placeholder="Enter your e-mail adress here ..."
+                        placeholder="Enter your e-mail adress"
                     />
                         <input class="submit-btn submit-btn-enabled" type="button" value="Get Notified" />
                     </span>
